cdk.out/assembly-CdkPipelineSimulatedCorporateNetworkStack-test-env/CdkPipelineSimulatedCorporateNetworkStacktestenvNetwork89EF0C0F.template.json
{
 "Resources": {
  "BackupVPC91AA08F9": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.4.0.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/Resource"
   }
  },
  "BackupVPCpublicSubnet1Subnet5FF0CD90": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.4.0.0/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1/Subnet"
   }
  },
  "BackupVPCpublicSubnet1RouteTableFD969AA5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1/RouteTable"
   }
  },
  "BackupVPCpublicSubnet1RouteTableAssociation0C2156BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "BackupVPCpublicSubnet1RouteTableFD969AA5"
    },
    "SubnetId": {
     "Ref": "BackupVPCpublicSubnet1Subnet5FF0CD90"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1/RouteTableAssociation"
   }
  },
  "BackupVPCpublicSubnet1DefaultRoute3108547F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "BackupVPCpublicSubnet1RouteTableFD969AA5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "BackupVPCIGW944CE33C"
    }
   },
   "DependsOn": [
    "BackupVPCVPCGWDAED08E9"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/publicSubnet1/DefaultRoute"
   }
  },
  "BackupVPCprivateSubnet1SubnetA9E26BCE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.4.0.64/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/privateSubnet1/Subnet"
   }
  },
  "BackupVPCprivateSubnet1RouteTable22C41491": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/privateSubnet1/RouteTable"
   }
  },
  "BackupVPCprivateSubnet1RouteTableAssociationE7765360": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "BackupVPCprivateSubnet1RouteTable22C41491"
    },
    "SubnetId": {
     "Ref": "BackupVPCprivateSubnet1SubnetA9E26BCE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/privateSubnet1/RouteTableAssociation"
   }
  },
  "BackupVPCIGW944CE33C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/IGW"
   }
  },
  "BackupVPCVPCGWDAED08E9": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "InternetGatewayId": {
     "Ref": "BackupVPCIGW944CE33C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/VPCGW"
   }
  },
  "BackupVPCStaticCustomerGatewayF23409EF": {
   "Type": "AWS::EC2::CustomerGateway",
   "Properties": {
    "BgpAsn": 65000,
    "IpAddress": "83.221.156.77",
    "Type": "ipsec.1",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/Static/CustomerGateway"
   }
  },
  "BackupVPCStatic70F6DD4B": {
   "Type": "AWS::EC2::VPNConnection",
   "Properties": {
    "CustomerGatewayId": {
     "Ref": "BackupVPCStaticCustomerGatewayF23409EF"
    },
    "Type": "ipsec.1",
    "StaticRoutesOnly": true,
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC"
     }
    ],
    "VpnGatewayId": {
     "Ref": "BackupVPCVpnGateway3810F727"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/Static/Resource"
   }
  },
  "BackupVPCStaticRoute1921683110132DF3F7B1D": {
   "Type": "AWS::EC2::VPNConnectionRoute",
   "Properties": {
    "DestinationCidrBlock": "192.168.31.101/32",
    "VpnConnectionId": {
     "Ref": "BackupVPCStatic70F6DD4B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/Static/Route1921683110132"
   }
  },
  "BackupVPCVpnGateway3810F727": {
   "Type": "AWS::EC2::VPNGateway",
   "Properties": {
    "Type": "ipsec.1",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/VpnGateway/Default"
   }
  },
  "BackupVPCVPCVPNGW49A5B08B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    },
    "VpnGatewayId": {
     "Ref": "BackupVPCVpnGateway3810F727"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/VPCVPNGW"
   }
  },
  "BackupVPCRoutePropagationB1CE6F63": {
   "Type": "AWS::EC2::VPNGatewayRoutePropagation",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "BackupVPCprivateSubnet1RouteTable22C41491"
     }
    ],
    "VpnGatewayId": {
     "Ref": "BackupVPCVpnGateway3810F727"
    }
   },
   "DependsOn": [
    "BackupVPCVPCVPNGW49A5B08B"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupVPC/RoutePropagation"
   }
  },
  "BackupSG64CB4D7C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.4.0.0/24",
      "Description": "from 10.4.0.0/24:HTTPS",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "192.168.31.101/32",
      "Description": "from 192.168.31.101/32:SSH",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "192.168.31.101/32",
      "Description": "from 192.168.31.101/32:ICMP",
      "FromPort": -1,
      "IpProtocol": "icmp",
      "ToPort": -1
     },
     {
      "CidrIp": "10.4.0.0/24",
      "Description": "from 10.4.0.0/24:TCP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "BackupVPC91AA08F9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/BackupSG/Resource"
   }
  },
  "MyCfnVPNGateway": {
   "Type": "AWS::EC2::VPNGateway",
   "Properties": {
    "Type": "ipsec.1",
    "Tags": [
     {
      "Key": "vpnkey",
      "Value": "vpnvalue"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/MyCfnVPNGateway"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22QQWvDMAyFf0vvjrdlUNix5FB2GSYpuQ5H01a3iRRsuSWU/vd5SbsssJOfPp6eJOd6/aIfV/YcMvg4Zq1r9KUSC0eV0DtCri91D6r4pNoUysSmdVDFhlB+2KxKjoI727Q485ltQmBwVhzTr1kZ705WcM54JUGf9DbRsx1uQ2/VRtJW+w5JVN1TwUQI97wiBuEO/aLxbelZgGmBlLPs+LcavcZzb7+mAyqE6J0MW8+xH6/9C66qxMDRw/gRd31VZpA908Ozfsr1enUIzmU+krgOdTm93xJjf8WLAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "CdkPipelineSimulatedCorporateNetworkStack/test-env/Network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefBackupVPC91AA08F9CEDED641": {
   "Value": {
    "Ref": "BackupVPC91AA08F9"
   },
   "Export": {
    "Name": "test-env-Network:ExportsOutputRefBackupVPC91AA08F9CEDED641"
   }
  },
  "ExportsOutputFnGetAttBackupSG64CB4D7CGroupIdD0CDA928": {
   "Value": {
    "Fn::GetAtt": [
     "BackupSG64CB4D7C",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "test-env-Network:ExportsOutputFnGetAttBackupSG64CB4D7CGroupIdD0CDA928"
   }
  },
  "ExportsOutputRefBackupVPCprivateSubnet1SubnetA9E26BCE9289B6CA": {
   "Value": {
    "Ref": "BackupVPCprivateSubnet1SubnetA9E26BCE"
   },
   "Export": {
    "Name": "test-env-Network:ExportsOutputRefBackupVPCprivateSubnet1SubnetA9E26BCE9289B6CA"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
